Fully Responsive Edition

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
       <title>Coming Soon WP</title>
       <link rel="stylesheet" type="text/css" href="style.css">
       <link rel="stylesheet" href="css/font-awesome.css">
+      <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
 
@@ -25,8 +26,8 @@
     <hr>
     <p id="demo" style="font-size:30px"></p>
 
-    <form action="#">
-      <input type="text" name="email" id="email" value="Subscribe to find out when we are done.">
+    <form action="#" >
+      <input type="text" name="email" id="email" placeholder="Subscribe.....">
       <input type="submit" value="Submit">
     </form>
 
