Fully Documented Template

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <html>
 <head>
-      <title>Coming Soon WP</title>
+  <!-- Title of the page -->
+      <title>Coming Soon WP</title> 
       <link rel="stylesheet" type="text/css" href="style.css">
       <link rel="stylesheet" href="css/font-awesome.css">
       <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
-
+<!-- Main Wrapper  -->
 <div id="wrapper">
   <div class="bgimg">
 <div class="container">
     <div class="topleft">
       
-      
+      <!-- Social icons Division -->
       <div class="social">
       <a href="#" target="_blank" class="fa fa-facebook"></a>
       <a href="#" target="_blank" class="fa fa-twitter"></a>  
@@ -20,26 +21,34 @@
       <a href="#" target="_blank" class="fa fa-instagram"></a>
       </div>
   </div>
+  <!-- Social Icon Division Ends Here -->
 </div>
+<!-- Main Body Starts -->
   <div class="middle">
     <h1> WE ARE <span style="color:#ff9c00;"> COMING SOON</span></h1>
     <hr>
     <p id="demo" style="font-size:30px"></p>
-
+<!-- FOrm Starts -->
     <form action="#" >
       <input type="text" name="email" id="email" placeholder="Subscribe.....">
       <input type="submit" value="Submit">
     </form>
+    <!-- Form Ends -->
+
 
   </div>
+  <!-- Main Body Ends -->
 
   
- 
+ <!-- Copyright Section -->
   <div class="bottomleft">
     <p >&copy;-Produly designed by <a href="http://ghimires.com.np" target="_blank">Ciceer Ghimirey</a> |Phanthom Themes</p>
   </div>
 </div>
 </div>
+<!-- End of the web page -->
+
+<!-- Script for Countdown Clock starts -->
 
 <script>
 // Set the date we're counting down to
@@ -71,6 +80,7 @@ var countdownfunction = setInterval(function() {
     }
 }, 1000);
 </script>
+<!-- Script Ends -->
   
 </body>
 </html>
